# CH58X_BLE_Cmake

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
Dependency/BLE_LIB/: CH58xBLE_LIB.h
Dependency/HAL/: KEY.c  LED.c  MCU.c  RTC.c  SLEEP.c
Dependency/HAL/include/: SLEEP.h  config.h
Dependency/RVMSIS/: core_riscv.c  core_riscv.h
Dependency/StdPeriphDriver/: CH58x_clk.c  CH58x_i2c.c  CH58x_pwm.c  CH58x_pwr.c  CH58x_spi0.c  CH58x_sys.c  CH58x_uart0.c  CH58x_uart2.c  CH58x_uart3.c
Src/APP/: app_uart.c  peripheral.c  peripheral_main.c
Src/APP/app_drv_fifo/: app_drv_fifo.c  app_drv_fifo.h
Src/APP/ble_uart_service/: ble_uart_service.h  ble_uart_service_16bit.c
Src/APP/user_task/: app_user_task.c  app_user_task.h
Src/Profile/: devinfoservice.c  gattprofile.c
